# engine-statemanagement-paper

./: .gitignore  CMakeLists.txt
.act/: profile_systest.json
.github/workflows/: build_and_test.yml  profile_systest.yaml
apache-flink-baseline/: flink_config.yaml  pom.xml
cmake/: CheckToolchain.cmake  FindAVX.cmake  NebulaStreamTest.cmake
demo/queries/: mqtt.yaml
docker/dependency/: Development.dockerfile  DevelopmentLocal.dockerfile  hash_dependencies.sh
nes-common/include/: ExceptionDefinitions.inc
nes-common/include/DataServer/: TCPDataServer.hpp
nes-common/include/Util/: Common.hpp  Registry.hpp
nes-common/src/DataServer/: TCPDataServer.cpp
nes-configurations/include/Configurations/: Descriptor.hpp
nes-data-types/include/DataTypes/: Schema.hpp
nes-data-types/src/DataTypes/: DataType.cpp  Schema.cpp
nes-executable/: ExecutableQueryPlan.cpp
nes-executable/include/: ExecutableQueryPlan.hpp  PipelineExecutionContext.hpp
nes-inference/: CMakeLists.txt  LogicalInferModelNameOperator.cpp  LogicalInferModelOperator.cpp
nes-inference/include/: LogicalInferModelNameOperator.hpp  LogicalInferModelOperator.hpp
nes-input-formatters/: CMakeLists.txt
nes-input-formatters/include/InputFormatters/: InputFormatter.hpp  SyncInputFormatterTask.hpp
nes-input-formatters/private/: CSVInputFormatter.hpp  HL7InputFormatter.hpp  InputFormatterTask.hpp  NoOpInputFormatter.hpp  RawTupleBuffer.hpp
nes-input-formatters/src/: AsyncInputFormatterTask.cpp  CMakeLists.txt  CSVInputFormatter.cpp  HL7InputFormatter.cpp  InputFormatterTaskPipeline.cpp  NoOpInputFormatter.cpp  RawValueParser.cpp  SyncInputFormatterTask.cpp
nes-input-formatters/tests/UnitTests/: SmallFilesTest.cpp  SpecificSequenceTest.cpp
nes-input-formatters/tests/Util/: InputFormatterTestUtil.cpp  InputFormatterTestUtil.hpp
nes-memory/: BufferManager.cpp  FixedSizeBufferPool.cpp  FixedSizeBufferPool.hpp  NesDefaultMemoryAllocator.cpp  TestTupleBuffer.cpp  TupleBuffer.cpp  TupleBufferImpl.cpp  TupleBufferImpl.hpp  UnpooledChunksManager.cpp
nes-memory/MemoryLayout/: MemoryLayout.cpp
nes-memory/include/MemoryLayout/: MemoryLayout.hpp
nes-memory/tests/: BufferTests.cpp  UnpooledBufferTests.cpp
nes-nebuli/: CMakeLists.txt
nes-nebuli/include/: NebuLI.hpp
nes-nebuli/private/: PlanningContext.hpp  QueryConfig.hpp
nes-nebuli/src/: NebuLI.cpp  NebuLIStarter.cpp
nes-nebuli/src/YAML/: YAMLBinder.cpp
nes-nebuli/test/: expected_output.json
nes-nebuli/tests/: CostTest.cpp
nes-physical-operators/include/: EmitPhysicalOperator.hpp  HashMapSlice.hpp  SliceCacheOperatorHandler.hpp  WindowBasedOperatorHandler.hpp  WindowBuildPhysicalOperator.hpp
nes-physical-operators/src/: CMakeLists.txt  EmitPhysicalOperator.cpp  PhysicalOperator.cpp  WindowBasedOperatorHandler.cpp  WindowBuildPhysicalOperator.cpp  WindowProbePhysicalOperator.cpp
nes-physical-operators/tests/: CMakeLists.txt
nes-plugins/: CMakeLists.txt
nes-query-engine/: CMakeLists.txt  InternalTaskQueue.cpp  InternalTaskQueue.hpp  QueryEngine.cpp  RoundRobinTaskQueue.cpp  RoundRobinTaskQueue.hpp  RunningQueryPlan.cpp  SingleTaskQueue.cpp  SingleTaskQueue.hpp  Task.hpp  TaskQueue.hpp  TaskQueuePerThread.cpp  TaskQueuePerThread.hpp
nes-query-engine/include/: QueryEngine.hpp  QueryEngineConfiguration.hpp  QueryEngineStatisticListener.hpp
nes-query-engine/tests/: QueryManagerTest.cpp  QueryPlanTest.cpp
nes-query-optimizer/include/: QueryExecutionConfiguration.hpp  SliceCacheConfiguration.hpp
nes-runtime/include/: ExecutableQueryPlan.hpp  ExecutionContext.hpp
nes-runtime/src/: ExecutableQueryPlan.cpp
nes-single-node-worker/include/: LatencyListener.hpp  SingleNodeWorker.hpp  SingleNodeWorkerConfiguration.hpp  StatisticPrinter.hpp  ThroughputListener.hpp
nes-single-node-worker/src/: CMakeLists.txt  GrpcService.cpp  LatencyListener.cpp  SingleNodeWorker.cpp  SingleNodeWorkerStarter.cpp  StatisticPrinter.cpp  ThroughputListener.cpp
nes-sinks/src/: CMakeLists.txt  DiscardSink.cpp  FileSink.cpp  PrintSink.cpp
nes-sources/: CMakeLists.txt
nes-sources/private/: FileSource.hpp  MemorySource.hpp  SourceThread.hpp
nes-sources/src/: CMakeLists.txt  FileSource.cpp  MemorySource.cpp  SourceHandle.cpp  SourceProvider.cpp  SourceThread.cpp
nes-sources/tests/: SourceThreadTest.cpp
nes-systests/audio/: AudioStream.test
nes-systests/benchmark/: ClusterMonitoring.test  DEBS.test  LinearRoadBenchmark.test  Manufacturing.test  Nexmark.test  SmartGrid.test.disabled  YahooStreamingBenchmark.test
nes-systests/bug/: MixingInPlaceSourceAndFileSourceSemantics.test.disabled  ProjectionDuplicateFields.test.disabled  SchemaLargerThanBuffer.test.disabled  TESTDATACanNotAppearInTestName.test  TwoSources.test  TwoSourcesOneEmtpy.test
nes-systests/datatype/: VariableSizedData.test
nes-systests/inference/: iris.test
nes-systests/parser/: BasicTypeSupport.test  BasicTypeSupportTwoBuffers.test  DataFitsExactlyOneRawBuffer.test  FieldDelimiterRightAfterBufferSplit.test  FieldDelimiterRightBeforeBufferSplit.test  Fill_16_RawBuffers.test  RawBufferExpandsIntoMultipleBuffer.test  SingleTupleThatSpansThreeTBRaws.test  SingleTupleThatSpansTwoTBRaws.test  TupleSeparatorRightAfterBufferSplit.test  TupleSeparatorRightBeforeBufferSplit.test  VarSizedSupport.test
nes-systests/sources/: TCP_Source.test
nes-systests/systest/: CMakeLists.txt
nes-systests/systest/include/: SystestParser.hpp  SystestResultCheck.hpp  SystestRunner.hpp  SystestState.hpp
nes-systests/systest/src/: SystestBinder.cpp  SystestExecutor.cpp  SystestParser.cpp  SystestResultCheck.cpp  SystestRunner.cpp  SystestStarter.cpp  SystestState.cpp
nes-systests/systest/tests/: CMakeLists.txt  SystestParserInvalidTestFilesTests.cpp  SystestParserTests.cpp  SystestParserValidTestFilesTests.cpp
nes-systests/systest/tests/testdata/: valid.dummy
nes-systests/tuples/: FiveTuples.test  OneTuple.test  SourceWithoutTuples.test  TuplesDontFitIntoOneBuffer.test
scripts/: initializePerf.sh  install-local-docker-environment.sh  profile.sh
scripts/benchmarking/: run_in_docker.sh  utils.py
(+260 files in other folders)
